# tcad

./: .env_sample  Cargo.toml  README.md  install.bat  toast.ps1
src/: main.rs
