[package]
name = "tcad"
version = "0.1.0"
authors = ["Sathwik Matsa <sathwikmatsa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
regex = "1.3.1"
lazy_static = "1.4.0"
nix = "0.15.0"
